--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.3",
     "pm2": "^5.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
     "@types/node": "^20",
