--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query-devtools": "^5.28.4",
     "dayjs": "^1.11.10",
     "next": "14.1.3",
     "pm2": "^5.3.1",
@@ -18,11 +21,24 @@
     "sass": "^1.72.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@mswjs/http-middleware": "^0.9.2",
+    "@tanstack/eslint-plugin-query": "^5.27.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cors": "^2.8.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "express": "^4.18.3",
+    "msw": "^2.2.8",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
