--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "mock": "npx tsx watch ./src/mocks/http.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-query-devtools": "^5.28.4",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "next": "14.1.3",
     "pm2": "^5.3.1",
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@mswjs/http-middleware": "^0.9.2",
     "@tanstack/eslint-plugin-query": "^5.27.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -32,13 +31,6 @@
     "cors": "^2.8.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "express": "^4.18.3",
-    "msw": "^2.2.8",
     "typescript": "^5"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
   }
 }
