--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-query-devtools": "^5.28.4",
     "axios": "^1.6.8",
+    "cookie": "^0.6.0",
     "dayjs": "^1.11.10",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.15",
     "pm2": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "sass": "^1.72.0"
   },
   "devDependencies": {
