--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app"
+    "dev": "cross-env NODE_ENV=production nodemon app",
+    "start": "cross-env NODE_ENV=production pm2 start app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +13,16 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "react-intersection-observer": "^9.8.1"
+    "pm2": "^5.3.1",
+    "react-intersection-observer": "^9.8.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1"
