--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=production nodemon app",
-    "start": "cross-env NODE_ENV=production pm2 start app.js"
+    "dev": "cross-env NODE_ENV=development nodemon app",
+    "start": "cross-env NODE_ENV=development start app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "pm2": "^5.3.1",
     "react-intersection-observer": "^9.8.1",
     "serverless-http": "^3.2.0"
   },
